--- a/frontend/src/app/modules/features/common/notification/notification.component.html
+++ b/frontend/src/app/modules/features/common/notification/notification.component.html
@@ -49,6 +49,7 @@
 									<a *ngIf="items?.path1 && (items?.jobstatus===0 ||items?.jobstatus===3 )" class="primaryData">{{items?.path1}}</a>
 									{{items?.message1 ? items?.message1 : ''}}
 									<a *ngIf="items?.path" class="primaryData" [routerLink]="['/employer/job-detail-view', 'details']" [queryParams]="{id: items?.job_id}" routerLinkActive="router-link-active"  >{{items?.path}}</a>
+									 <a *ngIf="items?.path4" class="primaryData" [routerLink]="['/user/dashboard']" [queryParams]="{activeTab:'matches'}" routerLinkActive="router-link-active"  >{{items?.path4 ? items?.path4 : ''}}</a>
 									<a >{{items?.country}}</a>
 								</td>
 							</tr>
